<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">居然家政</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="common_loading">加载中&#8230;</string>
    <string name="dialog_prompt">提示</string>
    <string name="dialog_prompt_no">暂无可提现余额</string>
    <string name="dialog_prompt_yes">确定</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="order_project">服务项目:</string>
    <string name="order_code">订单编号:</string>
    <string name="order_time">预约时间:</string>
    <string name="order_address">预约地址:</string>
    <string name="order_people">服务人员:</string>
    <string name="order_kh_name">客户姓名:</string>
    <string name="order_kh_phone">客户电话:</string>
    <string name="order_phone">服务电话:</string>
    <string name="order_money">金           额:</string>
    <string name="home_bottom">查看全部服务</string>
    <string name="home_more">更多</string>
    <string name="apt_project">服务项目</string>
    <string name="apt_time">服务时间</string>
    <string name="apt_problem">问题描述</string>
    <string name="app_img">上传图片</string>
    <string name="app_choose">请选择服务时间</string>
    <string name="app_describe">请输入问题描述</string>
    <string name="app_money">上门费</string>
    <string name="app_understand">了解服务内容与报价</string>
    <string name="tj_adresss">新增地址</string>
    <string name="sz_adresss">设为默认地址</string>
    <string name="delete_adresss">删除</string>
    <string name="edit_adresss">编辑</string>
    <string name="op_name">姓名</string>
    <string name="op_tel">电话</string>
    <string name="op_address">地址</string>
    <string name="op_money">钱包支付</string>
    <string name="op_wx">微信支付</string>
    <string name="op_zfb">支付宝支付</string>
    <string name="op_tj">提交</string>
    <string name="add_name">请输入姓名</string>
    <string name="add_phone">请输入手机号码</string>
    <string name="add_address">街道、小区、门牌号等</string>
    <string name="add_preservation">保存</string>
    <string name="evaluate_one">1、是否准时？</string>
    <string name="evaluate_two">2、服务态度是否好？</string>
    <string name="evaluate_three">3、是否解决问题？</string>
    <string name="evaluate_four">4、是否说明注意事项？</string>
    <string name="evaluate_five">5、是否私自乱收费？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="submit_comments">提交意见......</string>
    <string name="tianjia">添加图片</string>
    <string name="home">首页</string>
    <string name="order">订单</string>
    <string name="huodong">活动</string>
    <string name="mine">我的</string>
    <string name="total">总计金额：</string>
    <string name="integral">居然之家会员积分支付</string>
    <string name="coupon">使用优惠券</string>
    <string name="cp">优惠券</string>
    <string name="news">消息中心</string>
    <string name="home_service">家政服务</string>
    <string name="money">¥</string>
    <string name="common">常用地址</string>
    <string name="photo_graph">拍照</string>
    <string name="photo_choose">从手机相册选取</string>
    <string name="photo_cancel">取消</string>
    <string name="price_list">价格表</string>
    <string name="service_description">服务说明</string>
    <string name="service_guarantee">服务保障</string>
    <string name="brand">居然之家，诚信品牌</string>
    <string name="warranty">所有配件，质保6个月</string>
    <string name="rework">3天不满意，无条件返工</string>
    <string name="service_charge">服务费</string>
    <string name="inspection_fee">检测费</string>
    <string name="maintenance_cost">维修费</string>
    <string name="accessories_cost">配件费</string>
    <string name="select_address">请选择地址</string>
    <string name="preservation">保存</string>
    <string name="sy_intergrla">使用积分</string>
    <string name="time1">08:00—10:00</string>
    <string name="time2">10:00—12:00</string>
    <string name="time3">12:00—14:00</string>
    <string name="time4">14:00—16:00</string>
    <string name="time5">16:00—18:00</string>
    <string name="time6">18:00—20:00</string>
    <string name="fx">分享到</string>
    <string name="wx_friend">微信好友</string>
    <string name="friend">朋友圈</string>
    <string name="xl">新浪微博</string>
    <string name="qqk">QQ空间</string>
    <string name="qq">QQ</string>
    <string name="confirm_the_payment">确认付款</string>


    <string name="share">居然之家</string>
</resources>
