<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#55222222"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ff"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_00"
        android:textSize="@dimen/fs_40"
        android:text="@string/fx"
        android:gravity="center"
        android:layout_marginTop="@dimen/ds_45"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_30"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/share_qq"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="@dimen/ds_180"
                android:layout_height="@dimen/ds_180"
                android:background="@drawable/ssdk_oks_classic_qq"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_20"
                android:text="@string/qq"
                android:gravity="center"
                android:textSize="@dimen/fs_40"
                android:textColor="@color/color_00"/>
        </LinearLayout>

        <LinearLayout

            android:id="@+id/share_friend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView

                android:layout_width="@dimen/ds_180"
                android:layout_height="@dimen/ds_180"
                android:background="@drawable/ssdk_oks_classic_wechat"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_20"
                android:text="@string/wx_friend"
                android:gravity="center"
                android:textSize="@dimen/fs_40"
                android:textColor="@color/color_00"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_weixin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView

                android:layout_width="@dimen/ds_180"
                android:layout_height="@dimen/ds_180"
                android:background="@drawable/ssdk_oks_classic_wechatmoments"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_20"
                android:gravity="center"
                android:text="@string/friend"
                android:textSize="@dimen/fs_40"
                android:textColor="@color/color_00"/>
        </LinearLayout>
    </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ds_30"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/share_qzone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="@dimen/ds_180"
                    android:layout_height="@dimen/ds_180"
                    android:background="@drawable/ssdk_oks_classic_qzone"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ds_20"
                    android:gravity="center"
                    android:text="@string/qqk"
                    android:textSize="@dimen/fs_40"
                    android:textColor="@color/color_00"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/share_weibo"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="@dimen/ds_180"
                    android:layout_height="@dimen/ds_180"
                    android:background="@drawable/ssdk_oks_classic_sinaweibo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ds_20"
                    android:gravity="center"
                    android:text="@string/xl"
                    android:textSize="@dimen/fs_40"
                    android:textColor="@color/color_00"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="@dimen/ds_180"
                    android:layout_height="@dimen/ds_180"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ds_20"
                    android:gravity="center"
                    android:text=""
                    android:textSize="@dimen/fs_40"
                    android:textColor="@color/color_00"/>
            </LinearLayout>
        </LinearLayout>

    <TextView
        android:id="@+id/pop_share_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_120"
        android:textColor="@color/color_ff"
        android:layout_marginTop="@dimen/ds_60"
        android:layout_marginLeft="@dimen/ds_40"
        android:layout_marginRight="@dimen/ds_40"
        android:background="@drawable/pop_share_cancle"
        android:layout_marginBottom="@dimen/ds_30"
        android:gravity="center"
        android:textSize="@dimen/fs_45"
        android:text="@string/photo_cancel"/>
    </LinearLayout>

</LinearLayout>
