<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">
    <LinearLayout
        android:background="@color/color_ff"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_155"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/ds_60"
            android:textColor="@color/color_88"
            android:gravity="center"
            android:textSize="@dimen/fs_50"
            android:text="@string/op_name"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/ds_40"
            android:background="@null"
            android:hint="@string/add_name"
            android:textColorHint="@color/color_c6"
            android:textSize="@dimen/fs_50"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_3"
        android:layout_marginLeft="@dimen/ds_40"
        android:background="@color/color_cc"/>
    <LinearLayout
        android:background="@color/color_ff"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_155"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/ds_60"
            android:textColor="@color/color_88"
            android:gravity="center"
            android:textSize="@dimen/fs_50"
            android:text="@string/op_tel"/>
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/ds_40"
            android:inputType="number"
            android:maxLength="11"
            android:background="@null"
            android:hint="@string/add_phone"
            android:textColorHint="@color/color_c6"
            android:textSize="@dimen/fs_50"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_3"
        android:layout_marginLeft="@dimen/ds_40"
        android:background="@color/color_cc"/>


    <LinearLayout
        android:background="@color/color_ff"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_155"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/lin01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
        <Spinner
            android:id="@+id/tv_city"
            android:layout_width="@dimen/ds_250"
            android:background="@null"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/ds_40"
            android:textColor="@color/color_88"
            android:textSize="@dimen/fs_50"
            android:text="@string/op_address"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/xiangxia_03"/>
        <View
            android:layout_width="@dimen/ds_4"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/ds_30"
            android:layout_marginTop="@dimen/ds_40"
            android:layout_marginBottom="@dimen/ds_40"
            android:background="@color/color_cc"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lin02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/tv_are"
                android:background="@null"
                android:layout_width="@dimen/ds_250"
                android:layout_height="match_parent"
                android:textColor="@color/color_88"
                android:gravity="center"
                android:textSize="@dimen/fs_50"
                android:text="@string/op_address"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/xiangxia_03"/>
            <View
                android:layout_width="@dimen/ds_4"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/ds_30"
                android:layout_marginTop="@dimen/ds_40"
                android:layout_marginBottom="@dimen/ds_40"
                android:background="@color/color_cc"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lin03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/tv_huan"
                android:background="@null"
                android:layout_width="@dimen/ds_250"
                android:layout_height="match_parent"
                android:textColor="@color/color_88"
                android:gravity="center"
                android:textSize="@dimen/fs_50"
                android:text="@string/op_address"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/xiangxia_03"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_3"
        android:layout_marginLeft="@dimen/ds_40"
        android:background="@color/color_cc"/>
    <LinearLayout
        android:background="@color/color_ff"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_155"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/ds_60"
            android:textColor="@color/color_88"
            android:gravity="center"
            android:textSize="@dimen/fs_50"
            android:text="详细地址"/>
        <EditText
            android:id="@+id/et_address"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/ds_40"
            android:background="@null"
            android:hint="@string/add_address"
            android:textColorHint="@color/color_c6"
            android:textSize="@dimen/fs_50"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_3"
        android:layout_marginLeft="@dimen/ds_40"
        android:background="@color/color_cc"/>

    <Button
        android:layout_marginTop="@dimen/ds_150"
        style="@style/button_click"
        android:id="@+id/add_btn"
        android:text="@string/add_preservation"
        />

</LinearLayout>
