<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_cc"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_30"
        android:background="@drawable/tiaowen"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/color_ff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_117"
        android:background="@color/color_ff"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fs_45"
            android:layout_marginLeft="@dimen/ds_40"
            android:textColor="@color/color_01"
            android:text="@string/apt_project"/>
        <TextView
            android:id="@+id/tv_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fs_45"
            android:layout_marginLeft="@dimen/ds_60"
            android:textColor="@color/color_11"
            android:text="@string/apt_project" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_3"
        android:layout_marginLeft="@dimen/ds_40"
        android:background="@color/color_cc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_117"
        android:gravity="center_vertical"
        android:background="@color/color_ff"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fs_45"
            android:layout_marginLeft="@dimen/ds_40"
            android:textColor="@color/color_01"
            android:text="@string/op_name"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fs_45"
            android:layout_marginLeft="@dimen/ds_150"
            android:textColor="@color/color_11"
            android:text="@string/apt_project" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_117"
        android:gravity="center_vertical"
        android:background="@color/color_ff"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fs_45"
            android:layout_marginLeft="@dimen/ds_40"
            android:textColor="@color/color_01"
            android:text="@string/op_tel"/>
        <TextView
            android:id="@+id/tv_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fs_45"
            android:layout_marginLeft="@dimen/ds_150"
            android:textColor="@color/color_11"
            android:text="@string/apt_project" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_117"
        android:gravity="center_vertical"
        android:background="@color/color_ff"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fs_45"
            android:layout_marginLeft="@dimen/ds_40"
            android:textColor="@color/color_01"
            android:text="@string/op_address"/>
        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fs_45"
            android:layout_marginLeft="@dimen/ds_150"
            android:textColor="@color/color_11"
            android:text="@string/apt_project" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_3"
        android:layout_marginLeft="@dimen/ds_40"
        android:background="@color/color_cc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_117"
        android:background="@color/color_ff"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ds_130"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/ds_40"
        android:textSize="@dimen/fs_45"
        android:textColor="@color/color_01"
        android:text="@string/app_money"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ds_130"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/ds_40"
            android:textSize="@dimen/fs_45"
            android:textColor="@color/color_fce"
            android:text="111"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_40"
        android:background="@color/color_cc"/>
</LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_qb"
        android:background="@color/color_ff"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_150">
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/ds_40"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/qianbaoxdpi_03"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_01"
                android:layout_marginLeft="@dimen/ds_95"
                android:textSize="@dimen/fs_45"
                android:text="@string/op_money"/>
        </LinearLayout>

        <CheckBox
            android:clickable="false"
            android:id="@+id/place_cb_qb"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/ds_90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ds_40"
            android:background="@drawable/selector_checkbox"
            android:layout_centerVertical="true"
            android:button="@null"
            android:checked="true"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_3"
        android:background="@color/color_cc"/>
    <RelativeLayout
        android:id="@+id/rl_wx"
        android:layout_width="match_parent"
        android:background="@color/color_ff"
        android:layout_height="@dimen/ds_150">
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/ds_40"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/weixinxdpi_03"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_01"
                android:layout_marginLeft="@dimen/ds_95"
                android:textSize="@dimen/fs_45"
                android:text="@string/op_wx"/>
        </LinearLayout>

        <CheckBox
            android:clickable="false"
            android:id="@+id/place_cb_wx"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/ds_90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ds_40"
            android:background="@drawable/selector_checkbox"
            android:layout_centerVertical="true"
            android:button="@null"
            android:checked="false"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_3"
        android:background="@color/color_cc"/>

    <RelativeLayout
        android:id="@+id/rl_zfb"
        android:background="@color/color_ff"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_150">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/ds_40"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/zhifubaoxdpi_03"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_01"
                android:layout_marginLeft="@dimen/ds_60"
                android:textSize="@dimen/fs_45"
                android:text="@string/op_zfb"/>
        </LinearLayout>

        <CheckBox
            android:clickable="false"
            android:id="@+id/place_cb_zfb"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/ds_90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ds_40"
            android:background="@drawable/selector_checkbox"
            android:layout_centerVertical="true"
            android:button="@null"
            android:checked="false"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_3"
        android:background="@color/color_cc"/>

            <Button
                android:id="@+id/tj_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ds_120"
                android:layout_marginTop="@dimen/ds_160"
                android:layout_marginLeft="@dimen/ds_50"
                android:layout_marginRight="@dimen/ds_50"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_blue_apt"
                android:text="@string/op_tj"
                android:textColor="@color/color_ff"
                android:textSize="@dimen/fs_50" />

</LinearLayout>
